--- a/persons/templates/address.html
+++ b/persons/templates/address.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+{% extends 'base.html' %}
+{% block main %}
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -19,11 +21,142 @@
 <form action="address/" method="post">
     {% csrf_token %}
     {% for address in person.address_set.all %}
-{#        <input type="radio" name="address" id="address{{ forloop.counter }}" value="{{ address.id }}" />#}
+        <span id="address{{ forloop.counter }}" value="{{ address.id }}" />
         <label for="address{{ forloop.counter }}{{ forloop.counter }}">
-            {{ address.text }}
+            {{ address.text}}
         </label><br>
     {% endfor %}
 </form>
+    <hr>
+    <hr>
+<h4>Рейтинг</h4>
+    <p>Средний рейтинг:
+        <span id="avg_mark_span">
+            {{ avg_mark }}
+        </span>
+    </p>
+{% if user.is_authenticated %}
+    {% if already_rated_by_user <= 0 or already_rated_by_user ==  None %}
+        <form action="post_mark/" method="post">
+            {% csrf_token %}
+            <div class="row">
+                <div class="col-sm text-center">
+                    <input name="mark"
+                           type="radio"
+                           value="1"/> 1
+                </div>
+                <div class="col-sm text-center">
+                    <input name="mark"
+                           type="radio"
+                           value="2"/> 2
+                </div>
+                <div class="col-sm text-center">
+                    <input name="mark"
+                           type="radio"
+                           value="3"/> 3
+                </div>
+                <div class="col-sm text-center">
+                    <input name="mark"
+                           type="radio"
+                           value="4"/> 4
+                </div>
+                <div class="col-sm text-center">
+                    <input name="mark"
+                           type="radio"
+                           value="5"/> 5
+                </div>
+                <div class="col-sm text-center">
+                    <input class="btn btn-success"
+                        type="submit"
+                        value="Отправить оценку"/>
+                </div>
+            </div>
+        </form>
+        {% else %}
+        Твой рейтинг: {{ user_rating }}
+    {% endif %}
+
+{% endif %}
+
+    <h4>Чат</h4>
+    {% if user.is_authenticated %}
+        <form action="post/" method="post">
+            {% csrf_token %}
+            <div class="input-group mb-3">
+                <input type="text"
+                       class="form-control"
+                       placeholder="Введите сообщение"
+                       name="message"/>
+                <div class="input-group-append">
+                    <input class="btn btn-success"
+                           type="submit"
+                           value="Отправить"/>
+                </div>
+            </div>
+        </form>
+    {% endif %}
+
+    <div id="history">
+    {% for messages in latest_messages %}
+        <div class="card">
+        <div class="card-body">
+            <strong>
+                {{ messages.author.username }}
+            </strong>
+            <br/>
+            <em>
+                {{ messages.pub_date|date:'Y-m-d H:i:s' }}
+            </em>
+            <br/>
+            {{ messages.message }}
+        </div>
+        </div>
+        <br/>
+    {% endfor %}
+</div>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js">
+</script>
+<script>
+function send_msg_update_request(){
+    $.get("msg_list/",{},parse_msg_update_response);
+    $.get("get_mark/",{},parse_mark_update_response);
+}
+function parse_msg_update_response(data, success){
+    //alert(data);
+    res = JSON.parse(data);
+    res_str = "";
+    for(i=0;i<res.length;i++){
+        // HTML-код вставляемых блоков с сообщениями
+        // скопирован выше - тот, что выводится
+        // при загрузке страницы
+        res_str += '<div class="card">\n' +
+            '        <div class="card-body">\n' +
+            '            <strong>\n' +
+            '                '+res[i].author__username+'\n' +
+            '            </strong>\n' +
+            '            <br/>\n' +
+            '            <em>\n' +
+            '                '+res[i].pub_date+'\n' +
+            '            </em>\n' +
+            '            <br/>\n' +
+            '            '+res[i].message+'\n' +
+            '        </div>\n' +
+            '        </div>\n' +
+            '        <br/>'
+    }
+    $("#history").html(res_str);
+}
+function parse_mark_update_response(data, success){
+    res = JSON.parse(data);
+    $("#avg_mark_span").html(res["mark__avg"].toFixed(1));
+}
+
+setInterval(send_msg_update_request, 5000);
+</script>
+
+{% endblock %}
+
+
+
 </body>
 </html>
