--- a/persons/templates/index.html
+++ b/persons/templates/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Главная страница</title>
 </head>
 <body>
+{% extends 'base.html' %}
+{% block main %}
 <h1>Список людей</h1>
 {% if message %}
     <p><strong>{{ message }}</strong></p>
@@ -22,6 +24,6 @@
 {% else %}
     <p>No persons are available right now.</p>
 {% endif %}
-
+{% endblock %}
 </body>
 </html>
